--- a/css/scss/layout/_body.scss
+++ b/css/scss/layout/_body.scss
@@ -1,4 +1,4 @@
-  body {
+  .no-scroll {
     overflow: hidden;
     @media (max-width: 1000px) {
     position: fixed;
